syntax = "proto3";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message BoostResourceComponentDTO {
  string id = 1;
  optional double value = 2;
  string resource_id = 6;
  string resource_type = 7;
  repeated string cities = 8;
  string dynamic_values_id = 9;
}
